--- a/PeopleAndAppleStockPrices/PeopleAndAppleStockPrices/Base.lproj/Main.storyboard
+++ b/PeopleAndAppleStockPrices/PeopleAndAppleStockPrices/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="iR6-Aa-Zfh">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Stocks View Controller-->
+        <!--Stonks-->
         <scene sceneID="tON-mK-CpW">
             <objects>
                 <viewController id="UWa-d7-pZK" customClass="StocksViewController" customModule="PeopleAndAppleStockPrices" customModuleProvider="target" sceneMemberID="viewController">
@@ -21,21 +21,21 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="stockCell" textLabel="YPL-Mo-gBq" detailTextLabel="XCx-wg-ffY" style="IBUITableViewCellStyleSubtitle" id="ngQ-Lu-us2">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="55.5"/>
+                                        <rect key="frame" x="0.0" y="28" width="414" height="55.666667938232422"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ngQ-Lu-us2" id="0Zb-Vr-1aZ">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="55.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="55.666667938232422"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="YPL-Mo-gBq">
-                                                    <rect key="frame" x="20" y="10" width="33.5" height="20.5"/>
+                                                    <rect key="frame" x="20.000000000000004" y="8.9999999999999982" width="33.333333333333336" height="20.333333333333332"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="XCx-wg-ffY">
-                                                    <rect key="frame" x="20" y="31.5" width="44" height="14.5"/>
+                                                    <rect key="frame" x="19.999999999999996" y="31.333333333333332" width="43.666666666666664" height="14.333333333333334"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <nil key="textColor"/>
@@ -56,7 +56,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="hnB-Ts-nq0"/>
                     </view>
-                    <navigationItem key="navigationItem" id="gwt-TT-tKj"/>
+                    <navigationItem key="navigationItem" title="Stonks" id="gwt-TT-tKj"/>
                     <connections>
                         <outlet property="tableView" destination="zl7-oT-14e" id="QoU-5s-utT"/>
                     </connections>
@@ -65,7 +65,7 @@
             </objects>
             <point key="canvasLocation" x="1760.8695652173915" y="-560.49107142857144"/>
         </scene>
-        <!--Contacts View Controller-->
+        <!--Contacts-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ContactsViewController" customModule="PeopleAndAppleStockPrices" customModuleProvider="target" sceneMemberID="viewController">
@@ -78,21 +78,21 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="contactsCell" textLabel="db9-8U-Kbw" detailTextLabel="8BV-TH-bpc" style="IBUITableViewCellStyleSubtitle" id="XJu-o6-DDQ">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="55.5"/>
+                                        <rect key="frame" x="0.0" y="28" width="414" height="55.666667938232422"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="XJu-o6-DDQ" id="ZlE-C2-3RJ">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="55.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="55.666667938232422"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="db9-8U-Kbw">
-                                                    <rect key="frame" x="20" y="10" width="33.5" height="20.5"/>
+                                                    <rect key="frame" x="20.000000000000004" y="8.9999999999999982" width="33.333333333333336" height="20.333333333333332"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="8BV-TH-bpc">
-                                                    <rect key="frame" x="20" y="31.5" width="44" height="14.5"/>
+                                                    <rect key="frame" x="19.999999999999996" y="31.333333333333332" width="43.666666666666664" height="14.333333333333334"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <nil key="textColor"/>
@@ -101,7 +101,7 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="8F6-Gs-JHG" kind="show" id="wI0-st-ikT"/>
+                                            <segue destination="8F6-Gs-JHG" kind="show" id="kGv-XQ-cfe"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -123,7 +123,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" id="xq9-QC-Krq"/>
+                    <navigationItem key="navigationItem" title="Contacts" id="xq9-QC-Krq"/>
                     <connections>
                         <outlet property="searchBar" destination="j5u-2B-Mr1" id="a6h-jH-ZGb"/>
                         <outlet property="tableView" destination="hV5-wO-RZT" id="hnd-eE-hRK"/>
@@ -141,18 +141,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1R2-EV-F7N">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileImage" translatesAutoresizingMaskIntoConstraints="NO" id="1R2-EV-F7N">
                                 <rect key="frame" x="0.0" y="88" width="414" height="410"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ic6-tg-vna">
-                                <rect key="frame" x="20" y="562" width="374" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ic6-tg-vna">
+                                <rect key="frame" x="20" y="562" width="374" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oau-Rv-8YR">
-                                <rect key="frame" x="20" y="608" width="374" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oau-Rv-8YR">
+                                <rect key="frame" x="20" y="605" width="374" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -174,15 +174,24 @@
                                     <constraint firstItem="Oeg-3D-P4d" firstAttribute="top" secondItem="yaW-LQ-UkV" secondAttribute="top" constant="15" id="tvE-28-rDL"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fde-bw-bSl">
+                                <rect key="frame" x="20" y="648" width="374" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="Fde-bw-bSl" firstAttribute="leading" secondItem="aeD-qW-0Iq" secondAttribute="leading" constant="20" id="2oA-hH-Sya"/>
                             <constraint firstItem="aeD-qW-0Iq" firstAttribute="trailing" secondItem="Oau-Rv-8YR" secondAttribute="trailing" constant="20" id="B4E-PH-Cee"/>
                             <constraint firstItem="1R2-EV-F7N" firstAttribute="leading" secondItem="aeD-qW-0Iq" secondAttribute="leading" id="TQX-9f-vdo"/>
                             <constraint firstItem="Ic6-tg-vna" firstAttribute="leading" secondItem="aeD-qW-0Iq" secondAttribute="leading" constant="20" id="bWa-ca-0Sl"/>
+                            <constraint firstItem="Fde-bw-bSl" firstAttribute="top" secondItem="Oau-Rv-8YR" secondAttribute="bottom" constant="25" id="cOk-qx-qTu"/>
                             <constraint firstItem="1R2-EV-F7N" firstAttribute="height" secondItem="zQ5-Dw-TO3" secondAttribute="height" multiplier="0.457589" id="fKh-jM-SnE"/>
                             <constraint firstItem="1R2-EV-F7N" firstAttribute="top" secondItem="aeD-qW-0Iq" secondAttribute="top" id="fZq-9w-hBd"/>
                             <constraint firstItem="1R2-EV-F7N" firstAttribute="trailing" secondItem="aeD-qW-0Iq" secondAttribute="trailing" id="glA-Yp-wfo"/>
+                            <constraint firstItem="aeD-qW-0Iq" firstAttribute="trailing" secondItem="Fde-bw-bSl" secondAttribute="trailing" constant="20" id="hy5-iV-Vrw"/>
                             <constraint firstItem="Ic6-tg-vna" firstAttribute="top" secondItem="yaW-LQ-UkV" secondAttribute="bottom" constant="45" id="jCu-jE-jX7"/>
                             <constraint firstItem="Oau-Rv-8YR" firstAttribute="top" secondItem="Ic6-tg-vna" secondAttribute="bottom" constant="25" id="qiP-YE-XuQ"/>
                             <constraint firstItem="Oau-Rv-8YR" firstAttribute="leading" secondItem="aeD-qW-0Iq" secondAttribute="leading" constant="20" id="r10-Vm-zZt"/>
@@ -194,6 +203,13 @@
                         <viewLayoutGuide key="safeArea" id="aeD-qW-0Iq"/>
                     </view>
                     <navigationItem key="navigationItem" id="Bxf-Sq-v7Y"/>
+                    <connections>
+                        <outlet property="addressLabel" destination="Ic6-tg-vna" id="wYS-kX-aPy"/>
+                        <outlet property="emailLabel" destination="Fde-bw-bSl" id="FFj-UN-gxh"/>
+                        <outlet property="nameLabel" destination="Oeg-3D-P4d" id="teH-T6-nwg"/>
+                        <outlet property="phoneLabel" destination="Oau-Rv-8YR" id="BYy-oQ-F2j"/>
+                        <outlet property="profileImage" destination="1R2-EV-F7N" id="TZF-Sx-gDM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="n9U-Su-Nd2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -260,5 +276,6 @@
     <resources>
         <image name="dollarsign.circle" catalog="system" width="64" height="60"/>
         <image name="person" catalog="system" width="64" height="58"/>
+        <image name="profileImage" width="600" height="600"/>
     </resources>
 </document>
