updated UI for StockDetailVC

--- a/PeopleAndAppleStockPrices/PeopleAndAppleStockPrices/Base.lproj/Main.storyboard
+++ b/PeopleAndAppleStockPrices/PeopleAndAppleStockPrices/Base.lproj/Main.storyboard
@@ -20,29 +20,32 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="stockCell" textLabel="YPL-Mo-gBq" detailTextLabel="XCx-wg-ffY" style="IBUITableViewCellStyleSubtitle" id="ngQ-Lu-us2">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="55.666667938232422"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="stockCell" textLabel="YPL-Mo-gBq" detailTextLabel="XCx-wg-ffY" style="IBUITableViewCellStyleValue1" id="ngQ-Lu-us2">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="43.666667938232422"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ngQ-Lu-us2" id="0Zb-Vr-1aZ">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="55.666667938232422"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.666667938232422"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="YPL-Mo-gBq">
-                                                    <rect key="frame" x="20.000000000000004" y="8.9999999999999982" width="33.333333333333336" height="20.333333333333332"/>
+                                                    <rect key="frame" x="20.000000000000004" y="11.999999999999998" width="33.333333333333336" height="20.333333333333332"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="XCx-wg-ffY">
-                                                    <rect key="frame" x="19.999999999999996" y="31.333333333333332" width="43.666666666666664" height="14.333333333333334"/>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="XCx-wg-ffY">
+                                                    <rect key="frame" x="335.33333333333331" y="11.999999999999998" width="58.666666666666664" height="20.333333333333332"/>
                                                     <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="0Eg-EM-l93" kind="show" id="WEg-AN-7Wv"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -64,6 +67,56 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mNJ-vu-Gg6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1760.8695652173915" y="-560.49107142857144"/>
+        </scene>
+        <!--Stocks Detail Controller-->
+        <scene sceneID="lBH-Xw-3kL">
+            <objects>
+                <viewController id="0Eg-EM-l93" customClass="StocksDetailController" customModule="PeopleAndAppleStockPrices" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="OO3-fe-eRP">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileImage" translatesAutoresizingMaskIntoConstraints="NO" id="jPk-9M-btz">
+                                <rect key="frame" x="0.0" y="286" width="414" height="325"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y6C-46-LdY">
+                                <rect key="frame" x="20" y="163" width="374" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KXG-Nl-hzv">
+                                <rect key="frame" x="234" y="671" width="160" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MAk-Zk-XYN">
+                                <rect key="frame" x="20" y="671" width="160" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="jPk-9M-btz" firstAttribute="trailing" secondItem="Usa-GM-sv4" secondAttribute="trailing" id="4R7-N5-yRy"/>
+                            <constraint firstItem="Usa-GM-sv4" firstAttribute="bottom" secondItem="jPk-9M-btz" secondAttribute="bottom" constant="202" id="8xE-Dn-a6K"/>
+                            <constraint firstItem="Y6C-46-LdY" firstAttribute="leading" secondItem="Usa-GM-sv4" secondAttribute="leading" constant="20" id="DmV-mp-qMo"/>
+                            <constraint firstItem="jPk-9M-btz" firstAttribute="leading" secondItem="Usa-GM-sv4" secondAttribute="leading" id="UwK-x2-SiU"/>
+                            <constraint firstItem="jPk-9M-btz" firstAttribute="top" secondItem="Usa-GM-sv4" secondAttribute="top" constant="198" id="ij4-cA-Q2K"/>
+                            <constraint firstItem="Usa-GM-sv4" firstAttribute="trailing" secondItem="Y6C-46-LdY" secondAttribute="trailing" constant="20" id="kHC-St-C9Y"/>
+                            <constraint firstItem="Y6C-46-LdY" firstAttribute="top" secondItem="Usa-GM-sv4" secondAttribute="top" constant="75" id="vOE-8Z-FG5"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Usa-GM-sv4"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Rik-95-DOI"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tmT-T4-Pha" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2634.7826086956525" y="-560.49107142857144"/>
         </scene>
         <!--Contacts-->
         <scene sceneID="tne-QT-ifu">
